# LofiLandscapes

./: .gitignore  .gitmodules  BuildProjects.sh  CMakeLists.txt  LICENSE  README.md  WIN_GenerateProjects.bat  imgui.ini
examples/: Canyon.world  Island.world  Mountains.world  SnowyMountains.world  WyMountains.world
img/: ScierwoCzarnoksieznika.txt
res/shaders/: albedo.frag  albedo.glsl  const_val.glsl  displace.glsl  fbm.glsl  height.frag  height.glsl  mnormal.frag  mnormal.glsl  normal.frag  normal.glsl  present.frag  quad.frag  quad.vert  shaded.frag  shaded.vert  shadow.frag  shadow.glsl  test.frag  test.vert  voronoi.glsl  wireframe.frag  wireframe.vert
res/shaders/common/: clipmap.glsl  clipmap_move.glsl  hash.glsl  pbr.glsl  quad.vert
res/shaders/debug/: cubemap_preview.glsl  texture2d_preview.glsl  texture3d_preview.glsl
res/shaders/grass/: noise.glsl  present.frag  present.vert  raycast.glsl
res/shaders/map/: advanced_fbm.glsl  const_val.glsl  fbm.glsl  maximal_mip.glsl  radial_cutoff.glsl  shadow.glsl  voronoi.glsl
res/shaders/material_map/: select_height.glsl  select_slope.glsl
res/shaders/materials/: albedo_blending.glsl  albedo_const.glsl  albedo_fbm.glsl  albedo_ramp.glsl  blending.glsl  color_ramp.glsl  common_fbm.glsl  const_albedo.glsl  const_val_roughness.glsl  fbm.glsl  normal.glsl  roughness_ramp.glsl  vorocracks.glsl  voronoi.glsl  wave.glsl
res/shaders/post/: calc_luminance.glsl  fxaa.glsl
res/shaders/sky/: aerial.glsl  aerial_shadowed.glsl  common.glsl  final.frag  final.vert  irradiance.glsl  multiscatter.glsl  prefiltered.glsl  scatter_volume.glsl  shadow_volume.glsl  skyview.glsl  transmittance.glsl
res/shaders/terrain/: advanced_fbm.glsl  curves.glsl  displace.glsl  fbm.glsl  normal.glsl  one_material.glsl  radial_cutoff.glsl  select_all.glsl  select_curvature.glsl  select_height.glsl  select_slope.glsl  shaded.frag  shaded.vert  shadow.glsl  terrace.glsl  voronoi.glsl  wireframe.vert
src/: Application.cpp  Application.h  Camera.cpp  Camera.h  EntryPoint.cpp  Events.h  Framebuffer.cpp  Framebuffer.h  GLUtils.cpp  GLUtils.h  ImGuiStyles.h  ImGuiUtils.cpp  ImGuiUtils.h  Keycodes.h  Profiler.cpp  Profiler.h  Quad.cpp  Quad.h  Renderer.cpp  Renderer.h  ResourceManager.cpp  ResourceManager.h  Scene.cpp  Scene.h  Serializer.cpp  Serializer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Timer.cpp  Timer.h  Window.cpp  Window.h
src/gui/: ImGuiIcons.h  ImGuiStyles.h  ImGuiUtils.cpp  ImGuiUtils.h
src/subrenderers/: Clipmap.cpp  Clipmap.h  ClipmapRenderer.cpp  ClipmapRenderer.h  EditorTask.cpp  EditorTask.h  GLUtils.cpp  GLUtils.h  GrassRenderer.cpp  GrassRenderer.h  MapGenerator.cpp  MapGenerator.h  MapRenderer.cpp  MapRenderer.h  MaterialEditor.cpp  MaterialEditor.h  MaterialGenerator.cpp  MaterialGenerator.h  MaterialMapGenerator.cpp  MaterialMapGenerator.h  MaterialRenderer.cpp  MaterialRenderer.h  PostProcessor.cpp  PostProcessor.h  SkyRenderer.cpp  SkyRenderer.h  TerrainRenderer.cpp  TerrainRenderer.h  TextureEditor.cpp  TextureEditor.h
